# fishmlserv

./: .gitignore  Dockerfile  MANIFEST.in  README.md  f.py  fly.toml  pyproject.toml
LB/: default.conf
note/: 9_standardscaler.ipynb  Note.ipynb
src/fishmlserv/: .main.py.swp  data.py  main.py  prediction.py
src/fishmlserv/model/: manager.py
