[project]
name = "fishmlserv"
version = "1.6.0"
description = "Machine Learning Model - using sklearn(KNeighborsClassifier) using FastApi, Fish.io"
authors = [
    {name = "Seokxkyu", email = "kyuseok000@gmail.com"},
]


dependencies = [
    "requests>=2.32.3",
    "tqdm>=4.66.5",
]

requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pytest.ini_options]
pythonpath = "src"

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[project.scripts]
get-model-path = "fishmlserv.model.manager:get_model_path"
prediction = "fishmlserv.prediction:main"
